# src/guardian/controller/guardian.controller.ts
@@ -1,4 +1,5 @@
-import { Controller, Body, Get, Post, Param } from '@nestjs/common';
+import { Controller, Body, Get, Post, Param, UseGuards } from '@nestjs/common';
+import { JwtAuthGuard } from 'src/auth/guards/jwt-auth.guard';
 import { GuardianService } from '../service/guardian.service';
 import {
   CreateGuardianDto,
@@ -10,21 +11,23 @@ import {
 export class GuardianController {
   constructor(private readonly guardianService: GuardianService) {}
 
+  @UseGuards(JwtAuthGuard)
   @Get()
   getAllGuardians(): Promise<PublicGuardianDto[]> {
     return this.guardianService.findAll();
   }
 
+  @UseGuards(JwtAuthGuard)
   @Get('/:id')
-  getGuardianById(@Param('id') id: string): Promise<PublicGuardianDto> {
+  getGuardianById(@Param('id') id: string): Promise<PrivateGuardianDTO> {
     return this.guardianService.findOneBy(id);
   }
 
-  // @Post()
-  // addGuardian(
-  //   @Body() createGuardianDto: CreateGuardianDto,
-  // ): Promise<CreateGuardianDto> {
-  //   console.log('createGuardianDto', createGuardianDto);
-  //   return this.guardianService.create(createGuardianDto);
-  // }
+  @UseGuards(JwtAuthGuard)
+  @Post()
+  addGuardian(
+    @Body() createGuardianDto: CreateGuardianDto,
+  ): Promise<CreateGuardianDto> {
+    return this.guardianService.create(createGuardianDto);
+  }
 }
